--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,9 @@
 [package]
 name = "artcam"
-version = "0.3.0"
+version = "0.3.2"
 edition = "2021"
+authors = ["Artur Gwoździowski <gwozdyk@gmail.com>"]
+
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
