--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "artcam"
+name = "artcam_xirys"
 version = "0.3.3"
 edition = "2021"
 authors = ["Artur Gwoździowski <gwozdyk@gmail.com>"]
